// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer() @@init 1`] = `
"Snapshot Diff:
- First value
+ Second value

- Object {}
+ Object {
+   \\"targetDate\\": \\"\\",
+ }"
`;

exports[`reducer() ADMIN-PC/MODULES/FEATURE-SETTING/UI/SEARCH_CONDITION/INITIALIZE 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
-   \\"targetDate\\": \\"2019-10-01\\",
+   \\"targetDate\\": \\"\\",
  }"
`;

exports[`reducer() ADMIN-PC/MODULES/FEATURE-SETTING/UI/SEARCH_CONDITION/SET 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
-   \\"targetDate\\": \\"\\",
+   \\"targetDate\\": \\"xxx\\",
  }"
`;
